blocks/columns/columns.css
.columns {
  margin: 2rem 0 4rem;
}

.columns *:last-child {
  margin-bottom: 0;
}

.columns p,
.columns dl,
.columns ol,
.columns ul,
.columns pre,
.columns blockquote {
  margin-bottom: 1.5rem;
}

.columns:not(.no-buttons) ol,
.columns:not(.no-buttons) ul {
  padding: revert;
}

.columns.invert-image-order-in-narrow-view {
  margin-bottom: 0;
}

.columns > div {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.columns:not(.native-image-sizes) img {
  width: 100%;
}

.columns h2,
.columns h3,
.columns h4 {
  font-size: var(--heading-font-size-m);
  font-weight: var(--font-weight-medium);
  line-height: 1.3em;
  margin: 0 auto 2.5rem;
}

.columns h6 {
  color: var(--secondary);
  font-size: var(--heading-font-size-xxxs);
  margin-top: 2rem;
}

.columns > div > div {
  order: 1;
}

.columns.history > div {
  align-items: center;
}

.columns.history picture {
  display: block;
  margin: 0 auto 2rem;
}

.columns p.button-container {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 1rem;
  width: 11rem;
}

.columns a.button.tertiary {
  background-color: unset;
  color: var(--tertiary);
  justify-content: flex-start;
  padding: 0;
}

.columns a.button.primary.video-link::after {
  content: url("../../icons/play.svg");
  position: relative;
  top: 0.1rem;
  left: 0.3rem;
}

.columns > div > .columns-img-col {
  order: 0;
}

.columns.invert-image-order-in-narrow-view > div .columns-img-col {
  order: 2;
}

.columns .non-singleton-img-wrapper img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}

.columns.crop-image img {
  object-fit: cover;
  height: 100%;
}

.columns > div > .columns-img-col img {
  display: block;
}

.columns > div > div h2,
.columns > div > div h3,
.columns > div > div h4 {
  margin: 1.5rem 0;
}

.columns > div > div p {
  margin-top: 0;
}

.columns:not(.history) > div div.non-singleton-img {
  margin: 0 1rem;
}

.columns.history h2 {
  border-bottom: 1px solid var(--primary);
  margin-bottom: 1rem;
}

.columns.crop-image > div {
  align-items: stretch;
}

.columns.constrain-width > div > div.columns-img-col {
  margin: 0 1rem;
}

.columns.top-down {
  margin: 40px 0 0;
}

.columns.top-down > div {
  align-items: flex-start;
  gap: 1rem;
}

.columns.top-down.columns-2-cols {
  max-width: 790px;
}

.columns.top-down.columns-3-cols {
  max-width: 1200px;
}

.columns.plain-links > div > div,
.columns.plain-links > div > div p {
  font-size: var(--body-font-size-s);
  margin-left: 0;
}

.columns.history.invert-image-order-in-narrow-view > div {
  flex-direction: column-reverse;
}

.columns.plain-links > div > div p:last-of-type {
  margin-bottom: 0;
}

.columns.plain-links > div h6 {
  color: var(--link-color);
  border-bottom: 1px var(--transparent-grey-light-color) solid;
  font-size: 1rem;
  line-height: 1.5;
  padding-bottom: 0.5rem;
  text-transform: unset;
}

.columns.plain-links.collapse > div h6 {
  color: var(--text-color);
  padding-bottom: 0.5rem;
  margin: 0 0 1rem;
  position: relative;
}

.columns.top-down.collapse {
  margin: 0;
}

.columns.top-down.collapse > div {
  gap: 0;
}

  /* both autoblocking options for bottom caption */
.columns.history div.image-collage.autoblocked picture ~ em,
.columns.history div.image-collage.autoblocked picture ~ p {
  color: var(--transparent-grey-color-2);
  font-size: var(--body-font-size-s);
  margin-top: 1rem;
  margin-bottom: 1rem;
  text-align: center;
}

  /* if the caption is on the same line then we can't text-align the em directly */
.columns.history div.image-collage.autoblocked div.non-singleton-img:last-of-type {
  display: flex;
  flex-direction: column;
}

@media (min-width: 62rem) {
  .columns.top-down.collapse > div {
    gap: 1.5rem;
  }
}

@media (max-width: 61rem) {
  .columns.collapse.top-down.columns-2-cols {
    max-width: 100%;
  }

  .columns.plain-links.collapse > div > div {
    width: 100%;
  }

  .columns.plain-links.collapse:not(.continuation) > div > div:first-child {
    margin-top: 3rem;
  }

  .columns.plain-links.collapse.collapse-without-top-margin:not(.continuation) > div > div:first-child {
    margin-top: 0;
  }

  .columns.plain-links.collapse > div h6::after {
    content: "";
    position: absolute;
    height: 20px;
    width: 10px;
    top: 50%;
    right: 0;
    transform: translateY(-50%) rotate(0deg);
    background-image: url("/icons/arrow-down.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    transition: ease 0.2s;
  }

  .columns.plain-links.collapse > div h6.active::after {
    transform: translateY(-50%) rotate(-180deg);
  }
}

.columns.plain-links > div li {
  list-style: none;
  padding-bottom: 1rem;
  box-sizing: border-box;
}

.columns.plain-links > div a {
  font-size: var(--body-font-size-s);
  color: var(--secondary);
}

.columns.plain-links a.button.primary {
  display: inline-block;
  font-weight: var(--font-weight-medium);
  background-color: unset;
  color: var(--secondary);
}

.columns.plain-links.collapse ul {
  display: none;
}

.columns.plain-links.collapse ul.active {
  display: block;
}

.columns-container.backgroundimage .backgroundimage {
  display: none;
}

@media (min-width: 62rem) {
  .columns {
    margin-bottom: 7.5rem;
  }

  .columns h2,
  .columns:not(.no-buttons) h3,
  .columns:not(.no-buttons) h4 {
    font-size: var(--heading-font-size-xl);
    font-weight: var(--font-weight-small);
    margin: 0 auto 3rem;
  }

  .columns h6 {
    font-size: var(--heading-font-size-xxs);
    margin-top: unset;
  }

  .columns p.button-container {
    flex-direction: row;
    align-items: center;
    gap: 2rem;
    width: unset;
  }

  .columns a.button.primary {
    min-width: 11rem;
  }

  .columns > div {
    flex-direction: unset;
    gap: 3rem;
  }

  .columns.history picture {
    margin: 0 auto 2rem;
  }

  .columns.history picture:last-child {
    margin: 0 auto;
  }

  /* picture in column with text */
  .columns.history p ~ div > div.image-collage.autoblocked picture {
    display: table;
    width: auto;
  }

  .columns > div .columns-img-col {
    order: unset;
  }

  .columns > div > div {
    flex: 1;
    order: unset;
    flex-basis: 50%;
  }

  .columns.history > div {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: 2rem;
  }

  .columns.invert-image-order-in-narrow-view > div .columns-img-col {
    order: unset;
  }

  .columns.plain-links > div a {
    font-size: var(--body-font-size-m);
    line-height: 1.2;
  }

  .columns.plain-links.collapse ul {
    display: block;
  }

  .columns .non-singleton-img-wrapper img {
    height: 3.125rem;
    width: unset;
  }

  .columns-container.backgroundimage {
    position: relative;
  }

  .columns-container.backgroundimage .section-container {
    position: relative;
    z-index: 1;
  }

  .columns-container.backgroundimage .backgroundimage {
    position: absolute;
    display: block;
    width: 100%;
    height: 30rem;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
  }

  /* Column styles - Machine parts */
  main .block.columns.machine-parts > div {
    align-items: flex-start;
    gap: 1rem;
  }

  main .block.columns.machine-parts .columns-img-col {
    flex: auto;
    flex-basis: auto;
  }

  main .block.columns.machine-parts .non-singleton-img h1,
  main .block.columns.machine-parts .non-singleton-img h2,
  main .block.columns.machine-parts .non-singleton-img h3,
  main .block.columns.machine-parts .non-singleton-img h4,
  main .block.columns.machine-parts .non-singleton-img h5,
  main .block.columns.machine-parts .non-singleton-img h6 {
    text-align: left;
    text-transform: none;
  }

  main .block.columns.machine-parts .non-singleton-img p {
    margin-bottom: 1.5rem;
  }

  main .block.columns.machine-parts .non-singleton-img h6 {
    font-size: var(--heading-font-size-xs);
    margin-bottom: 1rem;
    letter-spacing: 0.05em;
    color: var(--light-black);
  }

  main .block.columns.machine-parts .non-singleton-img a {
    margin-bottom: 14px;
    line-height: 1;
    display: inline-block;
    width: 100%;
    font-weight: 500;
    font-size: var(--body-font-size-m);
    text-decoration: none;
  }

  main .block.columns.machine-parts .non-singleton-img a > strong {
    color: var(--light-black);
    margin-right: 1rem;
  }

  main .columns.history.invert-image-order-in-narrow-view > div {
    flex-direction: row;
  }
}

